--- a/hs_tools_resource/templates/pages/toolresource.html
+++ b/hs_tools_resource/templates/pages/toolresource.html
@@ -63,6 +63,16 @@
                             </div>
                     {% endif %}
                 </div>
+
+             <div>
+                    {% if supported_res_types %}
+                        <h4><strong>Supported Resource Types:</strong></h4>
+                        <hr style="margin-top: 0px;margin-bottom: 2px">
+                            <div class="row">
+                                <div class="col-sm-8">{{ supported_res_types}}</div>
+                            </div>
+                    {% endif %}
+                </div>
             </div>
         </div>
     {%  endif %}
