[#471] Made "Software Repository" url field a link.

--- a/hs_model_program/templates/pages/modelprogramresource.html
+++ b/hs_model_program/templates/pages/modelprogramresource.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-4"><strong>Software Repository:</strong></div>
-                            <div class="col-sm-8">{{ mpmetadata.software_repo }}</div>
+                            <div class="col-sm-8"><a target="_blank" href="{{ mpmetadata.software_repo }}">{{ mpmetadata.software_repo }}</a></div>
                         </div>
                         <div class="row">
                             <div class="col-sm-4"><strong>Operating System:</strong></div>
