[171] revised terms for RefTS and Web App

--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -800,7 +800,7 @@ l
             <li><strong>Term: </strong>RequestUrlBase</li>
             <li><strong>URI: </strong><a href="#RequestUrlBase">http://www.hydroshare.org/terms/RequestUrlBase</a></li>
             <li><strong>Label: </strong>Request URL Base</li>
-            <li><strong>Description: </strong>URL of the external tool/app</li>
+            <li><strong>Description: </strong>URL of the external web app</li>
         </ul>
     <a name="ToolResourceType"></a>
         <ul >
@@ -814,7 +814,7 @@ l
             <li><strong>Term: </strong>ToolVersion</li>
             <li><strong>URI: </strong><a href="#ToolVersion">http://www.hydroshare.org/terms/ToolVersion</a></li>
             <li><strong>Label: </strong>Tool Version</li>
-            <li><strong>Description: </strong>Tool Version</li>
+            <li><strong>Description: </strong>Web app Version</li>
         </ul>
 
 
